...
        android:textSize="22dp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/noun1EditText"
        android:hint="Noun"
        android:textAlignment="center"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
...
        android:hint="Animal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit Your Libs!"
        android:id="@+id/libsSubmitButton"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="22dp" />

...
